--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a class="nav__link" href="#section--3">Testimonials</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link nav__lijjjjnk--btn btn--show-modal" href="#"
+            <a class="nav__link nav__link--btn btn--show-modal" href="#"
               >Get now</a
             >
           </li>
