--- a/index.html
+++ b/index.html
@@ -460,3 +460,13 @@
     </div>
   </body>
 </html>
+
+<!-- 
+<blockquote> -- A section that is quoted from another source:
+
+<blockquote cite="http://www.worldwildlife.org/who/index.html">
+For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+</blockquote>
+
+The <blockquote> tag specifies a section that is quoted from another source.
+-->
