--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Tera Guard - An adaptive protection against advanced threats targeting
-      your business
+      Safeguard - An adaptive protection against advanced threats targeting your
+      business
     </title>
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,12 +29,16 @@
     <header class="header" id="section--0">
       <!-- ===================NAVBAR=================== -->
       <nav class="nav">
-        <img
-          src="./images/logo.png"
-          alt="Tera Guard Logo"
-          class="nav__logo"
-          id="logo"
-        />
+        <div class="nav__title">
+          <img
+            src="./images/icon.png"
+            alt="Tera Guard Logo"
+            class="nav__logo"
+            id="logo"
+          />
+          <p>Safeguard</p>
+        </div>
+
         <ul class="nav__links">
           <li class="nav__item">
             <a class="nav__link" href="#section--0">Home</a>
@@ -452,7 +456,7 @@
       </ul>
       <img src="./images/icon.png" alt="Tera Guard logo" class="footer__logo" />
       <p class="footer__copyright">
-        &copy; 2022, <strong>Tera Guard</strong> by Tanisha Tanvin. All rights
+        &copy; 2022, <strong>Safeguard</strong> by Tanisha Tanvin. All rights
         reserved.
       </p>
     </footer>
