--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
               voluptatem dicta, accusantium quisquam.
             </p>
           </div>
+
           <img
             src="./images/powerful-lazy.jpg"
             data-src="./images/powerful.jpg"
@@ -173,6 +174,7 @@
             data-src="./images/simple.jpg"
             class="features__img lazy-img"
           />
+
           <div class="features__feature">
             <div class="features__icon">
               <svg
@@ -419,7 +421,7 @@
       <section class="section section--sign-up">
         <div class="section__title">
           <h3 class="section__header">
-            The best day to join Tera Guard was one year ago. The second best is
+            The best day to join Sefeguard was one year ago. The second best is
             today!
           </h3>
         </div>
